--- a/css/style.css
+++ b/css/style.css
@@ -2,12 +2,15 @@ h1 {
   color: red;
   width: 900px;
 }
+.maionezi {
+  width: 30px;
+}
 .vedro {
-  width: 280px;
+  width: 28px;
 }
 .gusi {
-  width: 350px;
+  width: 35px;
 }
 .ky {
-  width: 350px;
+  width: 35px;
 }
